# cli_sshsync

./: CHANGELOG.md  CMakeLists.txt  README.md  env.example
.github/workflows/: quality_security.yml  repo-create_doctoc_md.yml
docs/: architecture.md
include/: EnvParser.hpp  Logger.hpp  SshClient.hpp
src/: EnvParser.cpp  EnvParser.hpp  Logger.cpp  Logger.hpp  SshClient.cpp  SshClient.hpp  main.cpp
